added exclusion by kml

--- a/1_detection/2_detector_simrdwn.ipynb
+++ b/1_detection/2_detector_simrdwn.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "#import os\n",
     "import math\n",
+    "import fiona \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -152,7 +153,7 @@
     "wgs84= {'init' :'EPSG:4326'}\n",
     "\n",
     "#open file\n",
-    "f = '../targets_2_simrdwn/'\n",
+    "f = '../targets_2_simrdwn/' + n + '/'\n",
     "file = f + 'predictions_' + n + '.csv'\n",
     "detections = pd.read_csv(file, delimiter=',', header=0)\n",
     "print(detections.shape)\n",
@@ -1128,7 +1129,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1219,9 +1222,92 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'init': 'EPSG:5637'}\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>farm_id</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7.77</td>\n",
+       "      <td>15.54</td>\n",
+       "      <td>POINT (5804724.629710294 1365613.892462137)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>15.40</td>\n",
+       "      <td>POINT (5804709.543797413 1365638.928925416)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.66</td>\n",
+       "      <td>17.32</td>\n",
+       "      <td>POINT (5804737.988619858 1365647.278875503)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>17.78</td>\n",
+       "      <td>POINT (5804716.73346681 1365675.660826551)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.11</td>\n",
+       "      <td>16.22</td>\n",
+       "      <td>POINT (5804697.641777741 1365698.166477813)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'init': 'EPSG:5637'}"
+       "    id  farm_id  radius  diameter                                     geometry\n",
+       "9   10       26    7.77     15.54  POINT (5804724.629710294 1365613.892462137)\n",
+       "10  11       26    7.70     15.40  POINT (5804709.543797413 1365638.928925416)\n",
+       "11  12       26    8.66     17.32  POINT (5804737.988619858 1365647.278875503)\n",
+       "12  13       26    8.89     17.78   POINT (5804716.73346681 1365675.660826551)\n",
+       "13  14       26    8.11     16.22  POINT (5804697.641777741 1365698.166477813)"
       ]
      },
      "execution_count": 14,
@@ -1230,8 +1316,17 @@
     }
    ],
    "source": [
-    "d2 = d2.to_crs({'init': crs})\n",
-    "d2.crs"
+    "path= f + n + '_exclude.kml'\n",
+    "gpd.io.file.fiona.drvsupport.supported_drivers['KML'] = 'rw'\n",
+    "exclude = gpd.read_file(path, driver='KML')\n",
+    "exclude = exclude.to_crs({'init': crs})\n",
+    "print(exclude.crs)\n",
+    "\n",
+    "exclude['Dissolve'] = 0\n",
+    "exclude_dis = exclude.dissolve(by='Dissolve')\n",
+    "mask = ~d2_clip.within(exclude_dis.loc[0, 'geometry'])\n",
+    "d2_clip = d2_clip.loc[mask]\n",
+    "d2_clip.head()"
    ]
   },
   {
@@ -1260,22 +1355,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#export centroids\n",
+    "d2 = d2.to_crs({'init': crs})\n",
     "d2.to_file(f + n + '_simrdwn.shp')\n",
     "d2['geometry'] = d2['geometry'].to_crs(epsg=4326)\n",
     "d2.to_file(f + n + '_simrdwn.geojson', driver='GeoJSON')\n",
@@ -1286,9 +1369,9 @@
     "d2_clip.to_file(f + n + '_simrdwn_pts.geojson', driver='GeoJSON')\n",
     "\n",
     "#export farmsites\n",
-    "farmsites.to_file(f + n + '_simrdwn_farmsites.shp')\n",
-    "farmsites['geometry'] = farmsites['geometry'].to_crs(epsg=4326)\n",
-    "farmsites.to_file(f + n + '_simrdwn_farmsites.geojson', driver='GeoJSON')\n",
+    "# farmsites.to_file(f + n + '_simrdwn_farmsites.shp')\n",
+    "# farmsites['geometry'] = farmsites['geometry'].to_crs(epsg=4326)\n",
+    "# farmsites.to_file(f + n + '_simrdwn_farmsites.geojson', driver='GeoJSON')\n",
     "\n",
     "#export farmsites extents\n",
     "farmsites2.to_file(f + n + '_simrdwn_farmsites_ext.shp')\n",
