--- a/1_detection/2_detector_simrdwn.ipynb
+++ b/1_detection/2_detector_simrdwn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -138,7 +138,7 @@
        "4     c  1195   954  1217   978  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        " '85137.jpeg']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4   POINT (227540.338078235 4315548.206635939)  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -528,7 +528,7 @@
        "5    7.43  POINT (227471.9500476926 4315549.639538817)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -577,9 +577,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\geopandas\\tools\\sjoin.py:44: UserWarning: CRS of frames being joined does not match!\n",
+      "  warn('CRS of frames being joined does not match!')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -651,7 +659,7 @@
        "4  POINT (574324.6597086105 3866010.842547479)   14.44"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +685,7 @@
        "(786, 1)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -777,7 +785,7 @@
        "4  POLYGON ((694052.9056566937 3867967.623363503,...      1        5"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +883,7 @@
        "69  POLYGON ((714222.1894808528 4052633.277855517,...     37       70"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -979,7 +987,7 @@
        "24  POINT (702197.4974791425 3903261.987968508)   8.110"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1094,7 +1102,7 @@
        "4   5       32   8.250     16.50   POINT (702171.721853883 3903244.393861066)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,27 +1120,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250 farm site predictions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>count</th>\n",
+       "      <th>farm_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>POLYGON ((701864.8225094303 3903109.713557327,...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>51</td>\n",
+       "      <td>POLYGON ((838658.4778128521 4018887.38226955, ...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>52</td>\n",
+       "      <td>POLYGON ((838296.5887747587 4018548.302536449,...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>POLYGON ((497943.8377644163 3929714.208642512,...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>69</td>\n",
+       "      <td>POLYGON ((713762.5508021284 4052556.801365011,...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             geometry  count  farm_id\n",
+       "31  POLYGON ((701864.8225094303 3903109.713557327,...     24       32\n",
+       "51  POLYGON ((838658.4778128521 4018887.38226955, ...     13       52\n",
+       "52  POLYGON ((838296.5887747587 4018548.302536449,...     18       53\n",
+       "53  POLYGON ((497943.8377644163 3929714.208642512,...      4       54\n",
+       "69  POLYGON ((713762.5508021284 4052556.801365011,...     37       70"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# #generate farmsite extents\n",
-    "# envelope = gpd.GeoDataFrame(geometry = farmsites.envelope)\n",
-    "# farmsites2=farmsites.copy()\n",
-    "# farmsites2['geometry'] = envelope['geometry']\n",
-    "# print(len(farmsites2), 'farm site predictions')\n",
-    "# farmsites2.head()"
+    "envelope = gpd.GeoDataFrame(geometry = farmsites.envelope)\n",
+    "farmsites2=farmsites.copy()\n",
+    "farmsites2['geometry'] = envelope['geometry']\n",
+    "print(len(farmsites2), 'farm site predictions')\n",
+    "farmsites2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #exclusion of false positives\n",
+    "#exclusion of false positives\n",
     "# path= f + n + '_exclude.kml'\n",
     "# gpd.io.file.fiona.drvsupport.supported_drivers['KML'] = 'rw'\n",
     "# exclude = gpd.read_file(path, driver='KML')\n",
@@ -1155,38 +1245,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# #generate net pen buffers\n",
-    "# def buffer(row):\n",
-    "#      return row.geometry.buffer(row.radius)   \n",
+    "def buffer(row):\n",
+    "     return row.geometry.buffer(row.radius)   \n",
     "    \n",
-    "# d2_clip2 = d2_clip.copy()\n",
-    "# d2_clip2.crs\n",
+    "d2_clip2 = d2_clip.copy()\n",
+    "d2_clip2.crs\n",
     "\n",
-    "# buff = d2_clip2['geometry'] = d2_clip2.apply(buffer, axis=1)\n",
-    "# circles = gpd.GeoDataFrame(d2_clip2, geometry = buff, crs={'init': crs})"
+    "buff = d2_clip2['geometry'] = d2_clip2.apply(buffer, axis=1)\n",
+    "circles = gpd.GeoDataFrame(d2_clip2, geometry = buff, crs={'init': crs})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4581 {'init': 'EPSG:2100'}\n",
+      "15982 {'init': 'EPSG:2100'}\n",
+      "4581 {'init': 'EPSG:2100'}\n",
+      "250 {'init': 'EPSG:2100'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(len(circles), circles.crs)\n",
-    "# print(len(d2), d2.crs)\n",
-    "# print(len(d2_clip), d2_clip.crs)\n",
-    "# print(len(farmsites2), farmsites2.crs)"
+    "print(len(circles), circles.crs)\n",
+    "print(len(d2), d2.crs)\n",
+    "print(len(d2_clip), d2_clip.crs)\n",
+    "print(len(farmsites2), farmsites2.crs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1204,15 +1305,15 @@
    ],
    "source": [
     "# #export buffered centroids\n",
-    "# circles.to_file(f + n + '_simrdwn_pens.shp')\n",
-    "# circles['geometry'] = circles['geometry'].to_crs(epsg=4326)\n",
-    "# circles.to_file(f + n + '_simrdwn_pens.geojson', driver='GeoJSON')\n",
+    "circles.to_file(f + n + '_simrdwn_pens.shp')\n",
+    "circles['geometry'] = circles['geometry'].to_crs(epsg=4326)\n",
+    "circles.to_file(f + n + '_simrdwn_pens.geojson', driver='GeoJSON')\n",
     "\n",
     "# #export all centroids\n",
-    "# d2 = d2.to_crs({'init': crs})\n",
-    "# d2.to_file(f + n + '_simrdwn.shp')\n",
-    "# d2['geometry'] = d2['geometry'].to_crs(epsg=4326)\n",
-    "# d2.to_file(f + n + '_simrdwn.geojson', driver='GeoJSON')\n",
+    "d2 = d2.to_crs({'init': crs})\n",
+    "d2.to_file(f + n + '_simrdwn.shp')\n",
+    "d2['geometry'] = d2['geometry'].to_crs(epsg=4326)\n",
+    "d2.to_file(f + n + '_simrdwn.geojson', driver='GeoJSON')\n",
     "\n",
     "#export centroids within farmsites\n",
     "d2_clip.to_file(f + n + '_simrdwn_pts.shp')\n",
@@ -1225,9 +1326,9 @@
     "# farmsites.to_file(f + n + '_simrdwn_farmsites.geojson', driver='GeoJSON')\n",
     "\n",
     "# #export farmsites extents\n",
-    "# farmsites2.to_file(f + n + '_simrdwn_farmsites_ext.shp')\n",
-    "# farmsites2['geometry'] = farmsites2['geometry'].to_crs(epsg=4326)\n",
-    "# farmsites2.to_file(f + n + '_simrdwn_farmsites_ext.geojson', driver='GeoJSON')"
+    "farmsites2.to_file(f + n + '_simrdwn_farmsites_ext.shp')\n",
+    "farmsites2['geometry'] = farmsites2['geometry'].to_crs(epsg=4326)\n",
+    "farmsites2.to_file(f + n + '_simrdwn_farmsites_ext.geojson', driver='GeoJSON')"
    ]
   }
  ],
