--- a/0_search_areas/geojson_to_shp.ipynb
+++ b/0_search_areas/geojson_to_shp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
     "# eez = eez[eez['GEONAME'] == 'Greek Exclusive Economic Zone']  \n",
     "# file = eez\n",
     "\n",
-    "f = '/Users/Zack/0_seawarden/0_search_areas/3_aoi/'\n",
-    "n = 'ALB_aoi'\n",
+    "f = '/Users/Zack/0_seawarden/targets_2_simrdwn/GRC/'\n",
+    "n = 'GRC_simrdwn_pens'\n",
     "file = gpd.read_file(f + n + '.shp', encoding='utf-8')\n",
     "file.to_file('/Users/Zack/Desktop/'+ n + '.geojson', driver=\"GeoJSON\", encoding='utf-8')\n",
     "\n",
