--- a/0_search_areas/geojson_to_shp.ipynb
+++ b/0_search_areas/geojson_to_shp.ipynb
@@ -130,6 +130,24 @@
     "file.to_file('/Users/Zack/Desktop/'+ n + '.geojson', driver=\"GeoJSON\", encoding='utf-8')\n",
     "# file.to_file('/Users/Zack/Desktop/GRC_EEZ.geojson', driver=\"GeoJSON\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import geopandas as gpd\n",
+    "folder = '../0_search_areas/3_aoi/temp/'\n",
+    "files = os.listdir(folder)\n",
+    "\n",
+    "\n",
+    "for i in files:\n",
+    "    aoi=gpd.read_file(folder + i, encoding='utf-8')\n",
+    "    aoi=eez[['GEONAME', 'geometry']]\n",
+    "    aoi.to_file('/Users/Zack/Desktop/'+ i, driver=\"GeoJSON\", encoding='utf-8')"
+   ]
   }
  ],
  "metadata": {
