--- a/1_detection/2_detector_simrdwn_fun.ipynb
+++ b/1_detection/2_detector_simrdwn_fun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#SET COUNTRY/CRS <-------------------------------------------------------------------------------CHANGE\n",
+    "countries = ['TUR', 'EPSG:5637'],['ESP', 'EPSG:2062'],['HRV', 'EPSG:3765'],['ITA', 'EPSG:7794'],['CYP', 'EPSG:6312'],['MLT', 'EPSG:3034'],['FRA', 'EPSG:2154'],['ALB', 'EPSG:6962'] \n",
+    "# n = ['GRC', 'EPSG:2100'] #greece\n",
+    "\n",
     "def simrdwn(n):\n",
     "    #open file\n",
     "    f = '../targets_2_simrdwn/' + n[0] + '/'\n",
     "    file = f + 'predictions_' + n[0] + '.csv'\n",
     "    detections = pd.read_csv(file, delimiter=',', header=0)\n",
-    "    print('country:' n[0])\n",
+    "    print('country:', n[0])\n",
     "    print(len(detections), 'total SIMRDWN predictions')\n",
     "    #detections.head()\n",
     "\n",
@@ -183,7 +187,7 @@
     "    d2_clip_id['diameter']=d2_clip_id['radius'] * 2\n",
     "\n",
     "    d2_clip_id['radius']=round(d2_clip_id['radius'],2)\n",
-    "    d2_clip_id['diameter']=round(d2_clip_id['radius'],2)\n",
+    "    d2_clip_id['diameter']=round(d2_clip_id['diameter'],2)\n",
     "\n",
     "    d2_clip=d2_clip_id[['farm ID', 'cage ID', 'radius', 'diameter', 'geometry']]\n",
     "    print(len(d2_clip), 'net pen predictions')\n",
@@ -258,38 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ESP', 'EPSG:2062']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#SET COUNTRY/CRS <-------------------------------------------------------------------------------CHANGE\n",
-    "countries = ['TUR', 'EPSG:5637'],['ESP', 'EPSG:2062'],['HRV', 'EPSG:3765'],['ITA', 'EPSG:7794'],['CYP', 'EPSG:6312'],['MLT', 'EPSG:3034'],['FRA', 'EPSG:2154'],['ALB', 'EPSG:6962'] \n",
-    "# n = ['GRC', 'EPSG:2100'] #greece\n",
-    "\n",
-    "for i in countries:\n",
-    "    simrdwn(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "country: TUR\n",
       "13290 total SIMRDWN predictions\n",
       "13290 total SIMRDWN predictions\n",
       "{'init': 'EPSG:5637'}\n",
@@ -304,7 +284,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\ipykernel_launcher.py:141: SettingWithCopyWarning: \n",
+      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\ipykernel_launcher.py:146: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -321,6 +301,7 @@
       "146 farm site predictions\n",
       "final number of predicted net pens: 2115\n",
       "final number of predicted farm sites: 114\n",
+      "country: ESP\n",
       "5260 total SIMRDWN predictions\n",
       "5260 total SIMRDWN predictions\n",
       "{'init': 'EPSG:2062'}\n",
@@ -335,6 +316,7 @@
       "31 farm site predictions\n",
       "final number of predicted net pens: 38\n",
       "final number of predicted farm sites: 5\n",
+      "country: HRV\n",
       "7548 total SIMRDWN predictions\n",
       "7548 total SIMRDWN predictions\n",
       "{'init': 'EPSG:3765'}\n",
@@ -349,6 +331,7 @@
       "57 farm site predictions\n",
       "final number of predicted net pens: 416\n",
       "final number of predicted farm sites: 32\n",
+      "country: ITA\n",
       "6750 total SIMRDWN predictions\n",
       "6750 total SIMRDWN predictions\n",
       "{'init': 'EPSG:7794'}\n",
@@ -363,6 +346,7 @@
       "43 farm site predictions\n",
       "final number of predicted net pens: 241\n",
       "final number of predicted farm sites: 7\n",
+      "country: CYP\n",
       "1499 total SIMRDWN predictions\n",
       "1499 total SIMRDWN predictions\n",
       "{'init': 'EPSG:6312'}\n",
@@ -377,6 +361,7 @@
       "11 farm site predictions\n",
       "final number of predicted net pens: 75\n",
       "final number of predicted farm sites: 7\n",
+      "country: MLT\n",
       "198 total SIMRDWN predictions\n",
       "198 total SIMRDWN predictions\n",
       "{'init': 'EPSG:3034'}\n",
@@ -391,6 +376,7 @@
       "3 farm site predictions\n",
       "final number of predicted net pens: 19\n",
       "final number of predicted farm sites: 1\n",
+      "country: FRA\n",
       "10352 total SIMRDWN predictions\n",
       "10352 total SIMRDWN predictions\n",
       "{'init': 'EPSG:2154'}\n",
@@ -405,6 +391,7 @@
       "54 farm site predictions\n",
       "final number of predicted net pens: 21\n",
       "final number of predicted farm sites: 2\n",
+      "country: ALB\n",
       "2217 total SIMRDWN predictions\n",
       "2217 total SIMRDWN predictions\n",
       "{'init': 'EPSG:6962'}\n",
@@ -422,7 +409,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for i in countries:\n",
+    "    simrdwn(i)"
+   ]
   }
  ],
  "metadata": {
