--- a/1_detection/2_detector_simrdwn.ipynb
+++ b/1_detection/2_detector_simrdwn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "4   POINT (227540.338078235 4315548.206635939)  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {
     "scrolled": false
    },
@@ -371,7 +371,7 @@
        "5    7.43  POINT (227471.9500476926 4315549.639538817)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "4  POINT (574324.6597086105 3866010.842547479)   14.44"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "(786, 1)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -620,7 +620,7 @@
        "4  POLYGON ((694052.9056566937 3867967.623363503,...           1        5"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "69  POLYGON ((714222.1894808528 4052633.277855517,...          37       70"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {
     "scrolled": false
    },
@@ -822,7 +822,7 @@
        "24  POINT (702197.4974791425 3903261.987968508)   8.110"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {
     "scrolled": false
    },
@@ -889,7 +889,7 @@
        "      <td>32</td>\n",
        "      <td>1</td>\n",
        "      <td>6.88</td>\n",
-       "      <td>6.88</td>\n",
+       "      <td>13.76</td>\n",
        "      <td>POINT (702056.793952149 3903209.713557327)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -897,7 +897,7 @@
        "      <td>32</td>\n",
        "      <td>2</td>\n",
        "      <td>7.70</td>\n",
-       "      <td>7.70</td>\n",
+       "      <td>15.40</td>\n",
        "      <td>POINT (702081.1023536371 3903220.106714786)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -905,7 +905,7 @@
        "      <td>32</td>\n",
        "      <td>3</td>\n",
        "      <td>8.94</td>\n",
-       "      <td>8.94</td>\n",
+       "      <td>17.88</td>\n",
        "      <td>POINT (702146.2790860378 3903226.552240553)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -913,7 +913,7 @@
        "      <td>32</td>\n",
        "      <td>4</td>\n",
        "      <td>8.66</td>\n",
-       "      <td>8.66</td>\n",
+       "      <td>17.33</td>\n",
        "      <td>POINT (702105.460521807 3903237.317828557)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -921,7 +921,7 @@
        "      <td>32</td>\n",
        "      <td>5</td>\n",
        "      <td>8.25</td>\n",
-       "      <td>8.25</td>\n",
+       "      <td>16.50</td>\n",
        "      <td>POINT (702171.721853883 3903244.393861066)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -930,11 +930,11 @@
       ],
       "text/plain": [
        "   farm ID  cage ID  radius  diameter  \\\n",
-       "0       32        1    6.88      6.88   \n",
-       "1       32        2    7.70      7.70   \n",
-       "2       32        3    8.94      8.94   \n",
-       "3       32        4    8.66      8.66   \n",
-       "4       32        5    8.25      8.25   \n",
+       "0       32        1    6.88     13.76   \n",
+       "1       32        2    7.70     15.40   \n",
+       "2       32        3    8.94     17.88   \n",
+       "3       32        4    8.66     17.33   \n",
+       "4       32        5    8.25     16.50   \n",
        "\n",
        "                                      geometry  \n",
        "0   POINT (702056.793952149 3903209.713557327)  \n",
@@ -944,7 +944,7 @@
        "4   POINT (702171.721853883 3903244.393861066)  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
     "d2_clip_id['diameter']=d2_clip_id['radius'] * 2\n",
     "\n",
     "d2_clip_id['radius']=round(d2_clip_id['radius'],2)\n",
-    "d2_clip_id['diameter']=round(d2_clip_id['radius'],2)\n",
+    "d2_clip_id['diameter']=round(d2_clip_id['diameter'],2)\n",
     "\n",
     "d2_clip=d2_clip_id[['farm ID', 'cage ID', 'radius', 'diameter', 'geometry']]\n",
     "print(len(d2_clip), 'net pen predictions')\n",
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
@@ -1048,7 +1048,7 @@
        "69       70          37  POLYGON ((713762.5508021284 4052556.801365011,..."
       ]
      },
-     "execution_count": 60,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
        "      <td>32</td>\n",
        "      <td>1</td>\n",
        "      <td>6.88</td>\n",
-       "      <td>6.88</td>\n",
+       "      <td>13.76</td>\n",
        "      <td>POLYGON ((702063.673952149 3903209.713557327, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1192,7 +1192,7 @@
        "      <td>32</td>\n",
        "      <td>2</td>\n",
        "      <td>7.70</td>\n",
-       "      <td>7.70</td>\n",
+       "      <td>15.40</td>\n",
        "      <td>POLYGON ((702088.8023536371 3903220.106714786,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1200,7 +1200,7 @@
        "      <td>32</td>\n",
        "      <td>3</td>\n",
        "      <td>8.94</td>\n",
-       "      <td>8.94</td>\n",
+       "      <td>17.88</td>\n",
        "      <td>POLYGON ((702155.2190860377 3903226.552240553,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1208,7 +1208,7 @@
        "      <td>32</td>\n",
        "      <td>4</td>\n",
        "      <td>8.66</td>\n",
-       "      <td>8.66</td>\n",
+       "      <td>17.33</td>\n",
        "      <td>POLYGON ((702114.120521807 3903237.317828557, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1216,7 +1216,7 @@
        "      <td>32</td>\n",
        "      <td>5</td>\n",
        "      <td>8.25</td>\n",
-       "      <td>8.25</td>\n",
+       "      <td>16.50</td>\n",
        "      <td>POLYGON ((702179.971853883 3903244.393861066, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1225,11 +1225,11 @@
       ],
       "text/plain": [
        "   farm ID  cage ID  radius  diameter  \\\n",
-       "0       32        1    6.88      6.88   \n",
-       "1       32        2    7.70      7.70   \n",
-       "2       32        3    8.94      8.94   \n",
-       "3       32        4    8.66      8.66   \n",
-       "4       32        5    8.25      8.25   \n",
+       "0       32        1    6.88     13.76   \n",
+       "1       32        2    7.70     15.40   \n",
+       "2       32        3    8.94     17.88   \n",
+       "3       32        4    8.66     17.33   \n",
+       "4       32        5    8.25     16.50   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((702063.673952149 3903209.713557327, ...  \n",
@@ -1239,7 +1239,7 @@
        "4  POLYGON ((702179.971853883 3903244.393861066, ...  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "5    7.43  POINT (227471.9500476926 4315549.639538817)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "      <td>32</td>\n",
        "      <td>1</td>\n",
        "      <td>6.88</td>\n",
-       "      <td>6.88</td>\n",
+       "      <td>13.76</td>\n",
        "      <td>POINT (702056.793952149 3903209.713557327)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1373,7 +1373,7 @@
        "      <td>32</td>\n",
        "      <td>2</td>\n",
        "      <td>7.70</td>\n",
-       "      <td>7.70</td>\n",
+       "      <td>15.40</td>\n",
        "      <td>POINT (702081.1023536371 3903220.106714786)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1381,7 +1381,7 @@
        "      <td>32</td>\n",
        "      <td>3</td>\n",
        "      <td>8.94</td>\n",
-       "      <td>8.94</td>\n",
+       "      <td>17.88</td>\n",
        "      <td>POINT (702146.2790860378 3903226.552240553)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1389,7 +1389,7 @@
        "      <td>32</td>\n",
        "      <td>4</td>\n",
        "      <td>8.66</td>\n",
-       "      <td>8.66</td>\n",
+       "      <td>17.33</td>\n",
        "      <td>POINT (702105.460521807 3903237.317828557)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1397,7 +1397,7 @@
        "      <td>32</td>\n",
        "      <td>5</td>\n",
        "      <td>8.25</td>\n",
-       "      <td>8.25</td>\n",
+       "      <td>16.50</td>\n",
        "      <td>POINT (702171.721853883 3903244.393861066)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1406,11 +1406,11 @@
       ],
       "text/plain": [
        "   farm ID  cage ID  radius  diameter  \\\n",
-       "0       32        1    6.88      6.88   \n",
-       "1       32        2    7.70      7.70   \n",
-       "2       32        3    8.94      8.94   \n",
-       "3       32        4    8.66      8.66   \n",
-       "4       32        5    8.25      8.25   \n",
+       "0       32        1    6.88     13.76   \n",
+       "1       32        2    7.70     15.40   \n",
+       "2       32        3    8.94     17.88   \n",
+       "3       32        4    8.66     17.33   \n",
+       "4       32        5    8.25     16.50   \n",
        "\n",
        "                                      geometry  \n",
        "0   POINT (702056.793952149 3903209.713557327)  \n",
@@ -1420,7 +1420,7 @@
        "4   POINT (702171.721853883 3903244.393861066)  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "69       70          37  POLYGON ((713762.5508021284 4052556.801365011,..."
       ]
      },
-     "execution_count": 68,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,9 +1515,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "# #export all centroids\n",
     "d2 = d2.to_crs({'init': n[1]})\n",
