--- a/1_detection/2_detector_simrdwn_fun.ipynb
+++ b/1_detection/2_detector_simrdwn_fun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,21 @@
       "13290 total SIMRDWN predictions\n",
       "13290 total SIMRDWN predictions\n",
       "10589 total SIMRDWN predictions less than or equal to 55 meters\n",
-      "10589 predictions aggregated to 3316 predictions\n",
+      "10589 predictions aggregated to 3316 predictions\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Zack\\Anaconda3\\envs\\thesis\\lib\\site-packages\\geopandas\\tools\\sjoin.py:44: UserWarning: CRS of frames being joined does not match!\n",
+      "  warn('CRS of frames being joined does not match!')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3316 predictions\n",
       "684 total farmsite predictions based on farmsites\n",
       "146 farm site predictions containing 4 or more net pen predictions\n"
